feat: implement initial project structure  and core UI sections for the Premium Bakery website.

--- a/package.json
+++ b/package.json
@@ -20,4 +20,6 @@
     "@vitejs/plugin-react": "^5.1.4",
     "framer-motion": "^12.34.0",
     "tailwindcss": "^4.1.18",
-    "vite
+    "vite": "^7.3.1"
+  }
+}
